--- a/package.json
+++ b/package.json
@@ -1,26 +1,53 @@
 {
-  "name": "onxweb",
+  "name": "onx_business_website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.9",
+    "@heroicons/react": "^2.1.5",
+    "@next/bundle-analyzer": "^14.2.14",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.0",
+    "lenis": "^1.1.13",
+    "lucide-react": "^0.447.0",
+    "mysql2": "^3.11.3",
+    "next": "14.2.14",
+    "next-sitemap": "^4.2.3",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
+    "react-iframe": "^1.8.5",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.28.0",
+    "sitemap": "^8.0.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-simple-maps": "^3.0.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "tailwindcss-bg-patterns": "^0.3.0",
+    "typescript": "^5"
   }
 }
