fixed blog issues

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ EMAIL_TO=ashish.bhargav@awign.com
 #   DB_USER = tm_production_machine_user
 #   DB_PASSWORD =ScJQdWtnxg62ERNV
 #   DB_NAME= onx-awign
+NEXT_PUBLIC_API_URL=http://localhost:3000
